--- a/reset.css
+++ b/reset.css
@@ -52,3 +52,8 @@ h1, h2, h3, h4, h5, h6 {
 #root, #__next {
   isolation: isolate;
 }
+body {
+    
+    font-family: Gentium Book Plus;
+    color: #162D56;
+}
