--- a/reset.css
+++ b/reset.css
@@ -1,4 +1,5 @@
 /* 1. Use a more-intuitive box-sizing model */
+@import url('https://fonts.googleapis.com/css2?family=Gentium+Book+Plus:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 *, *::before, *::after {
   box-sizing: border-box;
 }
