--- a/contact/contact.css
+++ b/contact/contact.css
@@ -42,6 +42,7 @@ main {
     gap: 1rem;
     border: solid 2px;
     padding: 1rem;
+    border-radius: 2rem;
     p {
         margin: 1rem 0;
     }
@@ -54,5 +55,26 @@ main {
         letter-spacing: 0.1rem;
         padding: 0.5rem 1rem;
         
+    }
+}
+
+@media only screen and (min-width:700px) {
+
+    h1 {
+    margin: auto;
+    font-size: 2rem;
+    padding: 10% 0;
+    background-image: url(/images/hero-desktop.jpeg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+    .options-wrapper {
+        flex-direction: row;
+        justify-content: space-around;
+
+    }
+    .plant {
+        max-width: 5rem;
     }
 }
